# Shop-BE

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  init.sql  main.py  pyproject.toml
.github/workflows/: test.yml
Models/: cart.py  commodity.py  database.py  order.py  response.py  user.py
Routers/: cart.py  order.py  shop.py  user.py
Services/Cache/: cache.py
Services/Config/: config.py  config.toml.sample
Services/Database/: database.py
Services/Limiter/: size_limiter.py  slow_limiter.py
Services/Log/: logger.py
Services/Mail/: mail.py
Services/Security/: user.py
Services/Storage/: manager.py
Templates/: captcha.html
Tests/: conftest.py  test_address.py  test_cart.py  test_commodity.py  test_order.py  test_user.py
Tests/Utils/: user.py
docs/: user_workflows.md
