[project]
name = "shop-be"
version = "0.1.0"
description = "A Simple online shopping mall website's backend. Written by FastAPI. "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiocache>=0.12.3",
    "aiofiles>=24.1.0",
    "bcrypt>=4.2.1",
    "concurrent-log-handler>=0.9.25",
    "fastapi[all]>=0.115.6",
    "filetype>=1.2.0",
    "mysqlclient>=2.2.6",
    "pyjwt>=2.10.1",
    "rich>=13.9.4",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.36",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "pytest-order>=1.3.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "bs4>=0.0.2",
]
